<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/colorPrimary"
    tools:context=".activities.AboutActivity"
    tools:ignore="Overdraw">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/activity_about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/PopupMenuStyle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/activity_about_otherAppsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:text="@string/other_apps"
        android:textColor="@color/colorAccent"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/activity_about_contactUsLL"
        app:layout_constraintEnd_toEndOf="@id/activity_about_toolbar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/activity_about_toolbar"
        app:layout_constraintTop_toBottomOf="@+id/activity_about_toolbar" />

    <LinearLayout
        android:id="@+id/activity_about_contactUsLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/activity_about_creditLL"
        app:layout_constraintEnd_toEndOf="@id/activity_about_otherAppsTV"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/activity_about_otherAppsTV"
        app:layout_constraintTop_toBottomOf="@+id/activity_about_otherAppsTV">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_us"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/activity_about_facebookIV"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:id="@+id/activity_about_instagramIV"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:id="@+id/activity_about_twitterIV"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:id="@+id/activity_about_whatsappIV"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/activity_about_websiteIV"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name" />

            <ImageView
                android:id="@+id/activity_about_emailIV"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_about_creditLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/activity_about_privacyPolicyTV"
        app:layout_constraintEnd_toEndOf="@id/activity_about_contactUsLL"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/activity_about_contactUsLL"
        app:layout_constraintTop_toBottomOf="@+id/activity_about_contactUsLL">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/activity_about_creditTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/activity_about_iconTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/icon"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/activity_about_privacyPolicyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:text="@string/privacy_policy"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@id/activity_about_copyrightFL"
        app:layout_constraintEnd_toEndOf="@id/activity_about_copyrightFL"
        app:layout_constraintStart_toStartOf="@id/activity_about_copyrightFL" />

    <FrameLayout
        android:id="@+id/activity_about_copyrightFL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/activity_about_copyrightTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorOne" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>