<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_mainCL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/activity_main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/PopupMenuStyle" />

    <ProgressBar
        android:id="@+id/activity_main_progressbar"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:progress="0"
        android:progressDrawable="@drawable/progressbar_background"
        app:layout_constraintBottom_toTopOf="@+id/activity_main_checkAgainBTN"
        app:layout_constraintEnd_toEndOf="@id/activity_main_toolbar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/activity_main_toolbar"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_toolbar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/activity_main_progressTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_45_45"
        android:textColor="@color/colorOne"
        android:textSize="32sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="@id/activity_main_progressbar"
        app:layout_constraintEnd_toEndOf="@id/activity_main_progressbar"
        app:layout_constraintStart_toStartOf="@id/activity_main_progressbar"
        app:layout_constraintTop_toTopOf="@+id/activity_main_progressbar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity_main_checkAgainBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/check_again"
        android:textAllCaps="false"
        android:textColor="@color/colorOne"
        app:layout_constraintBottom_toTopOf="@+id/activity_main_mainHRV"
        app:layout_constraintEnd_toEndOf="@id/activity_main_progressbar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/activity_main_progressbar"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_progressbar" />

    <com.martiandeveloper.heartratemonitor.tools.HeartRateView
        android:id="@+id/activity_main_mainHRV"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/activity_main_mainSV"
        app:layout_constraintEnd_toEndOf="@id/activity_main_checkAgainBTN"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/activity_main_checkAgainBTN"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_checkAgainBTN" />

    <SurfaceView
        android:id="@+id/activity_main_mainSV"
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/activity_main_putYourFingerTV"
        app:layout_constraintEnd_toEndOf="@id/activity_main_putYourFingerTV"
        app:layout_constraintStart_toStartOf="@id/activity_main_putYourFingerTV" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/activity_main_putYourFingerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/put_your_finger"
        android:textColor="@color/colorOne"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@id/activity_main_bannerAdFL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_goneMarginBottom="8dp" />

    <FrameLayout
        android:id="@+id/activity_main_bannerAdFL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
